@@ -1079,7 +1079,6 @@ cl_symbols[] = {
 {SYS_ "CHAR-SET","si_char_set"},
 {SYS_ "CHDIR","si_chdir"},
 {SYS_ "CLEAR-COMPILER-PROPERTIES","cl_identity"},
-{SYS_ "CLOSE-PIPE","si_close_pipe"},
 {SYS_ "COERCE-TO-BASE-STRING","si_coerce_to_base_string"},
 {SYS_ "COERCE-TO-EXTENDED-STRING","si_coerce_to_extended_string"},
 {SYS_ "COERCE-TO-FILENAME","si_coerce_to_filename"},
@@ -1141,7 +1140,7 @@ cl_symbols[] = {
 {SYS_ "MKDIR","si_mkdir"},
 {SYS_ "MKSTEMP","si_mkstemp"},
 {SYS_ "RMDIR","si_rmdir"},
-{SYS_ "OPEN-PIPE","si_open_pipe"},
+{SYS_ "MAKE-PIPE","si_make_pipe"},
 {SYS_ "PACKAGE-LOCK","si_package_lock"},
 {SYS_ "PACKAGE-HASH-TABLES","si_package_hash_tables"},
 {SYS_ "PATHNAME-TRANSLATIONS","si_pathname_translations"},
