@@ -136,6 +136,12 @@ ECL 0.9k:
 
  - Accessors for low-level socket timeout attributes (by G. Carncross).
 
+ - The function EXT:OPEN-PIPE disappears, together with EXT:CLOSE-PIPE. Use
+   EXT:RUN-PROCESS instead.
+
+ - New function EXT:MAKE-PIPE implements the equivalent of POSIX pipe() but
+   producing a two-way stream.
+
 * CLOS:
 
  - When caching generic function calls, ECL now uses a thread-local hash table
